<resources>
    <string name="app_name">DiceRoller</string>
    <string name="button">Roll</string>
    <string name="todo">TODO</string>
    <string name="rule">Select a Number to predict the Dice Roll</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="you_selected">You Predicted</string>
    <string name="dice_rolled">Dice Rolled</string>
</resources>